--- a/www/kerbit/imports/ui/layouts/home-layout.html
+++ b/www/kerbit/imports/ui/layouts/home-layout.html
@@ -1,8 +1,9 @@
 <template name="HomeLayout">
   {{#unless redirect}}
-    {{>PageHeader}}
     {{>Navbar}}
+    <main>
     {{>Template.dynamic template=main}}
+    </main>
     {{>Footer}}
   {{/unless}}
 </template>
