--- a/www/kerbit/imports/ui/styles/main.scss
+++ b/www/kerbit/imports/ui/styles/main.scss
@@ -2,3 +2,11 @@
 
 // import main scss file
 @import "{poetic:materialize-scss}/sass/materialize.scss";
+body {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+main {
+  flex: 1 0 auto;
+}
