--- a/www/kerbit/imports/ui/components/footer.html
+++ b/www/kerbit/imports/ui/components/footer.html
@@ -10,13 +10,16 @@
   <footer class="page-footer">
     <div class="container">
       <div class="row">
-        <form class="col s12">
+        <form id="feedback" class="col s12 feedback">
           <div class="row">
             <div class="input-field col s12">
-              <textarea id="feedback" class="materialize-textarea white-text"
+              <textarea id="comments" class="materialize-textarea white-text"
                 style="border-bottom: 1px solid #ffffff;"></textarea>
               <label for="feedback" class="white-text">Help Us Improve With Feedback</label>
             </div>
+              <button class="btn waves-effect waves-light red"
+                type="submit">Submit Feedback<i class="material-icons
+                  right">send</i></button>
           </div>
         </form>
       </div>
