Start work on the home page

--- a/www/kerbit/imports/ui/components/header.html
+++ b/www/kerbit/imports/ui/components/header.html
@@ -55,7 +55,7 @@
 <template name="Navbar">
   <div class="navbar-fixed">
     <nav>
-      <div class="nav-wrapper">
+      <div class="nav-wrapper z-depth-5">
         <a href="/#top" class="brand-logo"><i class="fa fa-truck fa-fw"></i> | KERB.IT</a>
         <ul class="right hide-on-med-and-down">
           {{#unless loggedIn}}
