--- a/www/kerbit/imports/ui/layouts/dash-layout.html
+++ b/www/kerbit/imports/ui/layouts/dash-layout.html
@@ -1,9 +1,16 @@
 <template name="DashLayout">
-  {{>PageHeader}}
+  <header>
   {{>Navbar}}
-  {{>Sidebar}}
+  </header>
   <main>
-    {{>Template.dynamic template=main}}
+    <div class="row">
+      <div class="col s2">
+        {{>Sidebar}}
+      </div>
+      <div class="col s10">
+        {{>Template.dynamic template=main}}
+      </div>
+    </div>
   </main>
   {{>Footer}}
 </template>
