--- a/www/kerbit/imports/ui/layouts/dash-layout.html
+++ b/www/kerbit/imports/ui/layouts/dash-layout.html
@@ -1,16 +1,21 @@
 <template name="DashLayout">
   <header>
-  {{>Navbar}}
+    <div class="row">
+      {{>Navbar}}
+    </div>
   </header>
   <main>
-    <div class="row">
-      <div class="col s2">
-        {{>Sidebar}}
+    <section>
+      <div class="row">
+        <div class="col s1">
+          {{>Sidebar}}
+        </div>
+        <div class="col s11 offset-s1">
+          <div class="container">
+            {{>Template.dynamic template=main}}
+          </div>
+        </div>
       </div>
-      <div class="col s10">
-        {{>Template.dynamic template=main}}
-      </div>
-    </div>
+    </section>
   </main>
-  {{>Footer}}
 </template>
