Add line height to user info display

--- a/www/kerbit/imports/ui/components/sidebar.html
+++ b/www/kerbit/imports/ui/components/sidebar.html
@@ -43,7 +43,7 @@
           valign profile-image">
         </div>
         <div class="col s8">
-          <p>{{fullName}}</p>
+          <p>Welcome back, {{fullName}}</p>
         </div>
       </div>
     </li>
