--- a/www/kerbit/imports/ui/styles/main.scss
+++ b/www/kerbit/imports/ui/styles/main.scss
@@ -15,6 +15,7 @@ ul.side-nav.fixed {
 }
 .user-details .row {
   margin: 0;
+  line-height: 25px;
 }
 ul.side-nav.fixed li.user-details {
   background: url(../images/user-bg.jpg) no-repeat center center;
@@ -24,3 +25,4 @@ ul.side-nav.fixed li.user-details {
   background-size: cover;
   padding: 15px 0px 15px 15px;
 }
+
