[PB] Rewrite homepage and footer and add &nbsp to navbar

--- a/www/kerbit/imports/ui/components/footer.html
+++ b/www/kerbit/imports/ui/components/footer.html
@@ -26,7 +26,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      © Copyright Kerb.It team
+        <i class="fa fa-copyright fa-fw"></i> 2016 Kerb.It team | <a href="#" class="link-disabled">Terms</a> | <a href="#" class="link-disabled">Privacy</a>
       </div>
     </div>
   </footer>
