--- a/www/kerbit/imports/ui/components/header.html
+++ b/www/kerbit/imports/ui/components/header.html
@@ -56,7 +56,7 @@
   <div class="navbar-fixed">
     <nav>
       <div class="nav-wrapper z-depth-3">
-        <a href="/#top" class="brand-logo"><i class="fa fa-truck fa-fw"></i> | KERB.IT</a>
+        <a href="/#top" class="brand-logo">&nbsp;<i class="fa fa-truck fa-fw"></i> | KERB.IT</a>
         <ul class="right hide-on-med-and-down">
           {{#unless loggedIn}}
             <li><a href="/#services">Services</a></li>
