--- a/www/kerbit/imports/ui/styles/main.scss
+++ b/www/kerbit/imports/ui/styles/main.scss
@@ -42,6 +42,14 @@ ul.side-nav.fixed li.user-details {
   margin: 10px 0px;
 }
 
+/*
+FOOTER
+*/
+.link-disabled {
+  color: grey;
+  text-decoration: none;
+}
+
 /* Structure APPEARS TO BE:
 
 form class = "setting specific-class"
