[PB] Rewrite notFound

--- a/www/kerbit/imports/ui/styles/main.scss
+++ b/www/kerbit/imports/ui/styles/main.scss
@@ -50,6 +50,13 @@ FOOTER
   text-decoration: none;
 }
 
+/*
+NAV
+*/
+nav {
+  background-color: black;
+}
+
 /* Structure APPEARS TO BE:
 
 form class = "setting specific-class"
