[PB] Rewrite login/register pages

--- a/www/kerbit/imports/ui/styles/main.scss
+++ b/www/kerbit/imports/ui/styles/main.scss
@@ -54,9 +54,15 @@ FOOTER
 NAV
 */
 nav {
-  background-color: black;
+  //background-color: black;
 }
 
+/*
+ATFORM
+*/
+.at-btn {
+  margin-top: 15px;
+}
 /* Structure APPEARS TO BE:
 
 form class = "setting specific-class"
