Add last location button

--- a/www/kerbit/client/stylesheets/map.css
+++ b/www/kerbit/client/stylesheets/map.css
@@ -30,7 +30,7 @@
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
 }
 
-#pac-input {
+.pac-input {
     background-color: #fff;
     font-family: Roboto;
     font-size: 15px;
@@ -41,7 +41,18 @@
     width: 300px;
 }
 
-#pac-input:focus {
+.map-button {
+  background-color: #fff;
+  font-family: Roboto;
+  font-size: 11px;
+  font-weight: 300;
+  margin-left: 12px;
+  padding: 0 11px 0 13px;
+  text-overflow: ellipsis;
+  width: 90px;
+}
+
+.pac-input:focus {
     border-color: #4d90fe;
 }
 
