[PB] Rewrite my requests

--- a/www/kerbit/imports/ui/styles/main.scss
+++ b/www/kerbit/imports/ui/styles/main.scss
@@ -90,3 +90,11 @@ MAP
   background-size: 22px 40px;
   pointer-events: none;
 }
+
+/*
+GENERIC
+*/
+
+.extra-padding-bottom-15 {
+  padding-bottom: 15px;
+}
