--- a/www/kerbit/imports/ui/styles/main.scss
+++ b/www/kerbit/imports/ui/styles/main.scss
@@ -71,14 +71,75 @@ MAP
 */
 
 
+//#map-container {
+//  width: 100%;
+//  height: 500px;
+//  border: 1px solid black;
+//  position: relative;
+//}
+//
+//#map-container.request-pickup:after {
+//  width: 22px;
+//  height: 40px;
+//  display: block;
+//  content: ' ';
+//  position: absolute;
+//  top: 50%;
+//  left: 50%;
+//  margin: -40px 0 0 -11px;
+//  background: url('https://maps.gstatic.com/mapfiles/api-3/images/spotlight-poi_hdpi.png');
+//  background-size: 22px 40px;
+//  pointer-events: none;
+//}
+//
+//.controls {
+//  margin-top: 10px;
+//  border: 1px solid transparent;
+//  border-radius: 2px 0 0 2px;
+//  box-sizing: border-box;
+//  -moz-box-sizing: border-box;
+//  height: 32px;
+//  outline: none;
+//  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+//}
+//
+//.pac-input {
+//  background-color: #fff;
+//  font-family: Roboto;
+//  font-size: 15px;
+//  font-weight: 300;
+//  margin-left: 12px;
+//  padding: 0 11px 0 13px;
+//  text-overflow: ellipsis;
+//  width: 300px;
+//}
+//
+//.map-button {
+//  background-color: #fff;
+//  font-family: Roboto;
+//  font-size: 11px;
+//  font-weight: 300;
+//  margin-left: 12px;
+//  padding: 0 11px 0 13px;
+//  text-overflow: ellipsis;
+//  width: 90px;
+//}
+//
+//.pac-input:focus {
+//  border-color: #4d90fe;
+//}
+//
+//.pac-container {
+//  font-family: Roboto;
+//}
 #map-container {
   width: 100%;
-  height: 500px;
+  height: 400px;
   border: 1px solid black;
   position: relative;
 }
 
-#map-container.request-pickup:after {
+#map-container:after {
   width: 22px;
   height: 40px;
   display: block;
@@ -92,71 +153,16 @@ MAP
   pointer-events: none;
 }
 
-.controls {
-  margin-top: 10px;
-  border: 1px solid transparent;
-  border-radius: 2px 0 0 2px;
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  height: 32px;
-  outline: none;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-}
-
-.pac-input {
-  background-color: #fff;
-  font-family: Roboto;
-  font-size: 15px;
-  font-weight: 300;
-  margin-left: 12px;
-  padding: 0 11px 0 13px;
-  text-overflow: ellipsis;
-  width: 300px;
-}
-
-.map-button {
-  background-color: #fff;
-  font-family: Roboto;
-  font-size: 11px;
-  font-weight: 300;
-  margin-left: 12px;
-  padding: 0 11px 0 13px;
-  text-overflow: ellipsis;
-  width: 90px;
-}
-
-.pac-input:focus {
-  border-color: #4d90fe;
-}
-
-.pac-container {
-  font-family: Roboto;
-}
-//#map-container {
-//  width: 100%;
-//  height: 400px;
-//  border: 1px solid black;
-//  position: relative;
-//}
-//
-//#map-container:after {
-//  width: 22px;
-//  height: 40px;
-//  display: block;
-//  content: ' ';
-//  position: absolute;
-//  top: 50%;
-//  left: 50%;
-//  margin: -40px 0 0 -11px;
-//  background: url('https://maps.gstatic.com/mapfiles/api-3/images/spotlight-poi_hdpi.png');
-//  background-size: 22px 40px;
-//  pointer-events: none;
-//}
-
 
 #map-london-container {
-  width: 100%;
-  height: 400px;
-  border: 1px solid black;
-  position: relative;
+  //width: 100%;
+  //height: 100%px;
+  //border: 1px solid black;
+  //position: relative;
+  position: absolute;
+    top:0;
+    bottom:0;
+    right:0;
+    left:0;
+    overflow:hidden;
 }
