Add specific css class 'marker-overlay' (used for map in requestPickup) to display overlaid marker

--- a/www/kerbit/imports/ui/styles/main.scss
+++ b/www/kerbit/imports/ui/styles/main.scss
@@ -77,7 +77,7 @@ MAP
   position: relative;
 }
 
-#map-container:after {
+#map-container.marker-overlay::after {
   width: 22px;
   height: 40px;
   display: block;
