Creates new form view for makeRequest

--- a/www/kerbit/imports/ui/styles/main.scss
+++ b/www/kerbit/imports/ui/styles/main.scss
@@ -181,3 +181,13 @@ GENERIC
     left:0;
     overflow:hidden;
 }
+
+#pop{
+  height: 280px;
+  width: 470px;
+  position: fixed;
+  top: 20%;
+  right: 0%;
+  padding:10px;
+  background:#FFFFFF;
+}
