[PB] Fix pop-up not being editable

--- a/www/kerbit/imports/ui/styles/main.scss
+++ b/www/kerbit/imports/ui/styles/main.scss
@@ -199,8 +199,8 @@ GENERIC
   height: 280px;
   width: 470px;
   position: fixed;
-  top: 20%;
+  top: 10%;
   right: 0%;
   padding:10px;
-  background:#FFFFFF;
+  background-color: transparent;
 }
