Remove hardcoded colour for sidebar

--- a/www/kerbit/imports/ui/components/sidebar.html
+++ b/www/kerbit/imports/ui/components/sidebar.html
@@ -6,7 +6,7 @@
 </style>
 
     <ul class="side-nav fixed leftside-navigation z-depth-3">
-        <li class="user-details teal lighten-1">
+        <li class="user-details secondary-color">
             <div class="row valign-wrapper">
                 <div class="col s4">
 
