Setup sidebar palletes

--- a/www/kerbit/imports/ui/components/footer.html
+++ b/www/kerbit/imports/ui/components/footer.html
@@ -7,8 +7,8 @@
 </template>
 
 <template name="Footer">
-  <footer class="page-footer">
-    <div class="container">
+  <footer class="page-footer" style="background-color: transparent;" >
+<!--    <div class="container">
       <div class="row">
         <form id="feedback" class="col s12 feedback">
           <div class="row">
@@ -23,11 +23,11 @@
           </div>
         </form>
       </div>
-    </div>
+    </div>-->
     <div class="footer-copyright">
       <div class="container">
-        <i class="fa fa-copyright fa-fw"></i> 2016 Kerb.It team | <a href="#" class="link-disabled">Terms</a> | <a href="#" class="link-disabled">Privacy</a>
-      </div>
+        <span class="black-text"> <i class="fa fa-copyright fa-fw"></i>2016 Kerb.It team | <a href="#" class="link-disabled">Terms</a> | <a href="#" class="link-disabled">Privacy</a>
+      </span></div>
     </div>
   </footer>
 </template>
