--- a/www/kerbit/imports/ui/components/sidebar.html
+++ b/www/kerbit/imports/ui/components/sidebar.html
@@ -5,8 +5,8 @@
   }
 </style>
 
-    <ul class="side-nav fixed leftside-navigation z-depth-3">
-        <li class="user-details secondary-color">
+    <ul class="side-nav fixed leftside-navigation z-depth-3 tertiary-color">
+        <li class="user-details tertiary-color border-bottom-thin">
             <div class="row valign-wrapper">
                 <div class="col s4">
 
@@ -15,7 +15,7 @@
 
                 </div>
                 <div class="col s8">
-                    <p>Welcome back, {{fullName}}</p>
+                    <p class="primary-color-text">Welcome back, {{fullName}}</p>
                 </div>
             </div>
         </li>
