[PB] Finaly primary/secondary style after 3 hours-palet-discussion

--- a/www/kerbit/imports/ui/styles/main.scss
+++ b/www/kerbit/imports/ui/styles/main.scss
@@ -1,6 +1,6 @@
 @import "{poetic:materialize-scss}/sass/components/_color.scss";
-$primary-color: #2f3931;
-$secondary-color: #8593ae;
+$primary-color: #444c4c;
+$secondary-color: #78a5a3;
 //$button-raised-color: black;
 
 // import main scss file
