--- a/www/kerbit/imports/ui/styles/main.scss
+++ b/www/kerbit/imports/ui/styles/main.scss
@@ -10,6 +10,11 @@ $secondary-color: #78a5a3;
   background-color: #f8f5f2;
 }
 
+.quaternary-color {
+  background-color: #ce5a57
+}
+
+
 .primary-color-text {
   color: $primary-color;
 }
