Fix map container size

--- a/www/kerbit/imports/ui/styles/main.scss
+++ b/www/kerbit/imports/ui/styles/main.scss
@@ -31,6 +31,12 @@ body {
 main {
   flex: 1 0 auto;
 }
+
+.side-nav{
+  width: 240px;
+  overflow: scroll;
+}
+
 ul.side-nav.fixed {
   top: $navbar-height;
 }
@@ -208,10 +214,10 @@ GENERIC
   //border: 1px solid black;
   //position: relative;
   position: absolute;
-    top:0;
+    top:64px;
     bottom:0;
     right:0;
-    left:0;
+    left: 240px;
     overflow:hidden;
 }
 
