--- a/www/kerbit/imports/ui/styles/main.scss
+++ b/www/kerbit/imports/ui/styles/main.scss
@@ -202,6 +202,12 @@ GENERIC
   padding-left: 0px !important;
 }
 
+.override-margins-top-bottom-10 {
+  margin-bottom: 0px;
+  padding-bottom: 10px;
+  padding-top: 10px;
+}
+
 #map-london-container {
   //width: 100%;
   //height: 100%px;
