Fix broken GeoJson. Allow making requests

--- a/www/kerbit/imports/ui/styles/main.scss
+++ b/www/kerbit/imports/ui/styles/main.scss
@@ -230,3 +230,8 @@ GENERIC
   padding:10px;
   background-color: transparent;
 }
+
+.responsive-img.same-size-image {
+  width:  100px;
+  height: 500px;
+}
