Fix sidebar name

--- a/www/kerbit/imports/ui/components/sidebar.html
+++ b/www/kerbit/imports/ui/components/sidebar.html
@@ -32,7 +32,7 @@
         <li><a href="/consumer/request-pickup"><i
               class="fa fa-map-marker icons"></i>Request Pickup</a></li>
         <li><a href="/consumer/my-requests"><i
-              class="fa fa-paper-plane icons"></i>My Request</a></li>
+              class="fa fa-paper-plane icons"></i>My Requests</a></li>
         <li><a href="/consumer/history-client"><i
               class="fa fa-history icons"></i>Transaction History</a></li>
         {{/if}}
